# RBridge

./: README.md
RBridge/: build.gradle  settings.gradle
RBridge/app/: build.gradle
RBridge/app/src/androidTest/java/com/rastislavkish/rbridge/: ExampleInstrumentedTest.kt
RBridge/app/src/main/: AndroidManifest.xml
RBridge/app/src/main/java/com/rastislavkish/gdt/: FingerTrack.kt  Gesture.kt  Point.kt  TouchWrapper.kt
RBridge/app/src/main/java/com/rastislavkish/rbridge/: ConnectActivity.kt  ConnectActivityResult.kt  MainActivity.kt  RBridgeClient.kt
RBridge/app/src/main/res/layout/: activity_connect.xml  activity_main.xml
RBridge/app/src/main/res/values/: strings.xml  themes.xml
RBridge/app/src/main/res/values-night/: themes.xml
RBridge/app/src/test/java/com/rastislavkish/rbridge/: ExampleUnitTest.kt
config/: code_generation.sh  pubspec.yaml
config/android/app/: build.gradle
config/android/app/src/main/: AndroidManifest.xml
config/android/app/src/profile/: AndroidManifest.xml
config/ios/Runner/: Info.plist
config/ios/Runner.xcodeproj/: project.pbxproj
config/lib/: actions_screen.dart  commands_screen.dart  general_screen.dart  logic.dart  logic.g.dart  main.dart  rings_screen.dart  schemes_screen.dart  universal_widgets.dart
config/linux/: CMakeLists.txt
config/macos/Runner.xcodeproj/: project.pbxproj
config/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
config/web/: index.html
config/windows/: CMakeLists.txt
server/: Cargo.toml
server/src/: main.rs
