[package]
name = "server"
license="GPL-3.0-only"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enigo="0.0.14"
futures-util="0.3.27"
lazy_static="1.4.0"
local-ip-address="0.5.1"
regex="1.4.3"
serde={version="1.0.140", features=["derive"]}
serde_json="1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tungstenite="0.18.0"
tokio-tungstenite="0.18.0"
url="2.3.1"

